syntax = "proto3";

option java_multiple_files = true;
option java_package = "billboard.service";
option java_outer_classname = "RecruitmentProto";

package recruitment;

service Recruitment {
  rpc get(RecruitmentGetRequest) returns (RecruitmentReply) {}
  rpc list(RecruitmentListRequest) returns (RecruitmentReply) {}
  rpc filter(RecruitmentFilterRequest) returns (RecruitmentReply) {}
  rpc insert(RecruitmentInsertRequest) returns (RecruitmentReply) {}
  rpc update(RecruitmentUpdateRequest) returns (RecruitmentReply) {}
  rpc search(RecruitmentSearchRequest) returns (RecruitmentReply) {}
  rpc keywordSearch(RecruitmentKeywordSearchRequest) returns (RecruitmentReply) {}
  rpc status(RecruitmentStatusRequest) returns (RecruitmentReply) {}
  rpc enterpriseList(RecruitmentEnterpriseListRequest) returns (RecruitmentReply) {}
  rpc enterpriseSearch(RecruitmentEnterpriseSearchRequest) returns (RecruitmentReply) {}
  rpc subject(RecruitmentSubjectRequest) returns (RecruitmentReply) {}
  rpc jobFairEntList(RecruitmentJobFairEntListRequest) returns (RecruitmentReply) {}
  rpc jobFairList(RecruitmentJobFairListRequest) returns (RecruitmentReply) {}
}

message RecruitmentListRequest {}

message RecruitmentFilterRequest {
  string category = 1;
  map<string, string> param = 2;
}

message RecruitmentInsertRequest {
  uint32 enterprise_id = 1;
  string enterprise_uuid = 2;
  string name = 3;
  string qty = 4;
  string description = 5;
  string requirement = 6;
  string address1 = 7;
  string address2 = 8;
  string address3 = 9;
  string salary1 = 10;
  string salary2 = 11;
  string education = 12;
  string category = 13;
  string industry = 14;
  string position = 15;
}

message RecruitmentUpdateRequest {
  uint32 id = 1;
  string uuid = 2;
  string name = 3;
  string qty = 4;
  string description = 5;
  string requirement = 6;
  string address1 = 7;
  string address2 = 8;
  string address3 = 9;
  string salary1 = 10;
  string salary2 = 11;
  string education = 12;
  string category = 13;
  string industry = 14;
  string position = 15;
}

message RecruitmentStatusRequest {
  string status = 1;
  uint32 id = 2;
  string uuid = 3;
}

message RecruitmentGetRequest {
  uint32 id = 1;
  string uuid = 2;
}

message RecruitmentSearchRequest {
  string city = 1;
  bool category1 = 2;
  bool category2 = 3;
  bool category3 = 4;
}

message RecruitmentKeywordSearchRequest {
  string keyword = 1;
  string city = 2;
  bool category1 = 3;
  bool category2 = 4;
  bool category3 = 5;
}

message RecruitmentEnterpriseListRequest {
  uint32 id = 1;
  string uuid = 2;
}

message RecruitmentEnterpriseSearchRequest {
  string enterprise_id = 1;
  string uuid = 2;
  string name = 3;
  string category = 4;
  string date = 5;
  string status = 6;
  string education = 7;
}

message RecruitmentSubjectRequest {
  string subject = 1;
}

message RecruitmentJobFairEntListRequest {
  uint32 job_fair_id = 1;
  uint32 ent_id = 2;
  string ent_uuid = 3;
}

message RecruitmentJobFairListRequest {
  uint32 job_fair_id = 1;
}

message RecruitmentReply { string data = 1; }
